parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    PR_end
    TO_DIGIT
    PR_home

Grammar

Rule 0     S' -> prog
Rule 1     prog -> PR_program TO_LLAABRE declare mainBlock TO_LLACIERRA
Rule 2     val -> TO_NUM
Rule 3     val -> TO_FLOT
Rule 4     val -> PR_true
Rule 5     val -> PR_false
Rule 6     val -> ID
Rule 7     declare -> decVar decFunc
Rule 8     decVar -> var decVar
Rule 9     decVar -> empty
Rule 10    decFunc -> func decFunc
Rule 11    decFunc -> empty
Rule 12    var -> PR_var tipo ID arrayCreate
Rule 13    arrayCreate -> TO_CORABRE TO_NUM TO_CORCIERRA
Rule 14    arrayCreate -> TO_CORABRE TO_NUM TO_CORCIERRA TO_CORABRE TO_NUM TO_CORCIERRA
Rule 15    arrayCreate -> empty
Rule 16    arrayIndex -> TO_CORABRE exp TO_CORCIERRA
Rule 17    arrayIndex -> TO_CORABRE exp TO_CORCIERRA TO_CORABRE exp TO_CORCIERRA
Rule 18    arrayIndex -> empty
Rule 19    tipo -> PR_num
Rule 20    tipo -> PR_flot
Rule 21    tipo -> PR_bool
Rule 22    assign -> assignTo OP_IGUAL megaExp
Rule 23    assignTo -> ID arrayIndex
Rule 24    assignTo -> PR_kameForw
Rule 25    assignTo -> PR_kameBack
Rule 26    assignTo -> PR_kameRot
Rule 27    func -> func1 func2
Rule 28    func1 -> func11 func12
Rule 29    func11 -> PR_function decideType ID TO_PARABRE
Rule 30    func12 -> params TO_PARCIERRA TO_LLAABRE
Rule 31    func2 -> decVar bloque TO_LLACIERRA
Rule 32    decideType -> tipo
Rule 33    decideType -> PR_void
Rule 34    params -> tipo ID moreParams
Rule 35    params -> empty
Rule 36    moreParams -> TO_COMA tipo ID moreParams
Rule 37    moreParams -> empty
Rule 38    mainBlock -> mainBlock1 bloque TO_LLACIERRA
Rule 39    mainBlock1 -> PR_main TO_LLAABRE
Rule 40    opLogico -> PR_interseccion
Rule 41    opLogico -> PR_union
Rule 42    loop -> loop1 loop2 loop3
Rule 43    loop1 -> PR_loop
Rule 44    loop2 -> TO_PARABRE exp TO_PARCIERRA
Rule 45    loop3 -> TO_LLAABRE bloque TO_LLACIERRA
Rule 46    opRelacional -> OP_DOBLEIGUAL
Rule 47    opRelacional -> OP_DIFDE
Rule 48    opRelacional -> OP_MENORQUE
Rule 49    opRelacional -> OP_MENOROIGUAL
Rule 50    opRelacional -> OP_MAYORQUE
Rule 51    opRelacional -> OP_MAYOROIGUAL
Rule 52    bloque -> estructura bloque
Rule 53    bloque -> TO_UWU
Rule 54    estructura -> assign
Rule 55    estructura -> loop
Rule 56    estructura -> comparacion
Rule 57    estructura -> return
Rule 58    estructura -> funcCall
Rule 59    estructura -> decVar
Rule 60    funcCall -> funcCall1 funcCall2
Rule 61    funcCall -> PR_draw TO_PARABRE megaExp TO_PARCIERRA
Rule 62    funcCall -> PR_circle TO_PARABRE exp TO_PARCIERRA
Rule 63    funcCall -> PR_square TO_PARABRE exp TO_PARCIERRA
Rule 64    funcCall -> PR_size TO_PARABRE exp TO_PARCIERRA
Rule 65    funcCall -> PR_color TO_PARABRE colorChoice TO_PARCIERRA
Rule 66    funcCall1 -> ID TO_PARABRE
Rule 67    funcCall2 -> paramVals TO_PARCIERRA
Rule 68    bool -> PR_true
Rule 69    bool -> PR_false
Rule 70    colorChoice -> PR_red
Rule 71    colorChoice -> PR_green
Rule 72    colorChoice -> PR_blue
Rule 73    colorChoice -> PR_violet
Rule 74    colorChoice -> PR_orange
Rule 75    colorChoice -> PR_yellow
Rule 76    colorChoice -> PR_white
Rule 77    colorChoice -> PR_black
Rule 78    paramVals -> unParam moreParamVals
Rule 79    paramVals -> empty
Rule 80    moreParamVals -> TO_COMA unParam moreParamVals
Rule 81    moreParamVals -> empty
Rule 82    unParam -> ID TO_DOSPTOS megaExp
Rule 83    return -> PR_return megaExp
Rule 84    comparacion -> compara1 compara2
Rule 85    compara1 -> PR_if TO_PARABRE megaExp TO_PARCIERRA TO_LLAABRE
Rule 86    compara2 -> bloque TO_LLACIERRA maybeElse
Rule 87    maybeElse -> checkElse doElse
Rule 88    maybeElse -> empty
Rule 89    checkElse -> PR_else TO_LLAABRE
Rule 90    doElse -> bloque TO_LLACIERRA
Rule 91    megaExp -> maybeNot superExp anotherMega
Rule 92    maybeNot -> PR_negacion
Rule 93    maybeNot -> empty
Rule 94    anotherMega -> opLogico megaExp
Rule 95    anotherMega -> empty
Rule 96    superExp -> exp maybeRel
Rule 97    maybeRel -> opRelacional exp
Rule 98    maybeRel -> empty
Rule 99    exp -> term anotherExp
Rule 100   anotherExp -> OP_MAS exp
Rule 101   anotherExp -> OP_MENOS exp
Rule 102   anotherExp -> empty
Rule 103   term -> fact anotherTerm
Rule 104   anotherTerm -> OP_MULT term
Rule 105   anotherTerm -> OP_DIV term
Rule 106   anotherTerm -> OP_RESID term
Rule 107   anotherTerm -> empty
Rule 108   fact -> TO_PARABRE megaExp TO_PARCIERRA
Rule 109   fact -> ID arrayIndex
Rule 110   fact -> funcCall
Rule 111   fact -> val
Rule 112   empty -> <empty>

Terminals, with rules where they appear

ID                   : 6 12 23 29 34 36 66 82 109
OP_DIFDE             : 47
OP_DIV               : 105
OP_DOBLEIGUAL        : 46
OP_IGUAL             : 22
OP_MAS               : 100
OP_MAYOROIGUAL       : 51
OP_MAYORQUE          : 50
OP_MENOROIGUAL       : 49
OP_MENORQUE          : 48
OP_MENOS             : 101
OP_MULT              : 104
OP_RESID             : 106
PR_black             : 77
PR_blue              : 72
PR_bool              : 21
PR_circle            : 62
PR_color             : 65
PR_draw              : 61
PR_else              : 89
PR_end               : 
PR_false             : 5 69
PR_flot              : 20
PR_function          : 29
PR_green             : 71
PR_home              : 
PR_if                : 85
PR_interseccion      : 40
PR_kameBack          : 25
PR_kameForw          : 24
PR_kameRot           : 26
PR_loop              : 43
PR_main              : 39
PR_negacion          : 92
PR_num               : 19
PR_orange            : 74
PR_program           : 1
PR_red               : 70
PR_return            : 83
PR_size              : 64
PR_square            : 63
PR_true              : 4 68
PR_union             : 41
PR_var               : 12
PR_violet            : 73
PR_void              : 33
PR_white             : 76
PR_yellow            : 75
TO_COMA              : 36 80
TO_CORABRE           : 13 14 14 16 17 17
TO_CORCIERRA         : 13 14 14 16 17 17
TO_DIGIT             : 
TO_DOSPTOS           : 82
TO_FLOT              : 3
TO_LLAABRE           : 1 30 39 45 85 89
TO_LLACIERRA         : 1 31 38 45 86 90
TO_NUM               : 2 13 14 14
TO_PARABRE           : 29 44 61 62 63 64 65 66 85 108
TO_PARCIERRA         : 30 44 61 62 63 64 65 67 85 108
TO_UWU               : 53
error                : 

Nonterminals, with rules where they appear

anotherExp           : 99
anotherMega          : 91
anotherTerm          : 103
arrayCreate          : 12
arrayIndex           : 23 109
assign               : 54
assignTo             : 22
bloque               : 31 38 45 52 86 90
bool                 : 
checkElse            : 87
colorChoice          : 65
compara1             : 84
compara2             : 84
comparacion          : 56
decFunc              : 7 10
decVar               : 7 8 31 59
decideType           : 29
declare              : 1
doElse               : 87
empty                : 9 11 15 18 35 37 79 81 88 93 95 98 102 107
estructura           : 52
exp                  : 16 17 17 44 62 63 64 96 97 100 101
fact                 : 103
func                 : 10
func1                : 27
func11               : 28
func12               : 28
func2                : 27
funcCall             : 58 110
funcCall1            : 60
funcCall2            : 60
loop                 : 55
loop1                : 42
loop2                : 42
loop3                : 42
mainBlock            : 1
mainBlock1           : 38
maybeElse            : 86
maybeNot             : 91
maybeRel             : 96
megaExp              : 22 61 82 83 85 94 108
moreParamVals        : 78 80
moreParams           : 34 36
opLogico             : 94
opRelacional         : 97
paramVals            : 67
params               : 30
prog                 : 0
return               : 57
superExp             : 91
term                 : 99 104 105 106
tipo                 : 12 32 34 36
unParam              : 78 80
val                  : 111
var                  : 8

Parsing method: LALR

state 0

    (0) S' -> . prog
    (1) prog -> . PR_program TO_LLAABRE declare mainBlock TO_LLACIERRA

    PR_program      shift and go to state 1

    prog                           shift and go to state 2

state 1

    (1) prog -> PR_program . TO_LLAABRE declare mainBlock TO_LLACIERRA

    TO_LLAABRE      shift and go to state 3


state 2

    (0) S' -> prog .



state 3

    (1) prog -> PR_program TO_LLAABRE . declare mainBlock TO_LLACIERRA
    (7) declare -> . decVar decFunc
    (8) decVar -> . var decVar
    (9) decVar -> . empty
    (12) var -> . PR_var tipo ID arrayCreate
    (112) empty -> .

    PR_var          shift and go to state 5
    PR_function     reduce using rule 112 (empty -> .)
    PR_main         reduce using rule 112 (empty -> .)

    decVar                         shift and go to state 4
    declare                        shift and go to state 7
    var                            shift and go to state 6
    empty                          shift and go to state 8

state 4

    (7) declare -> decVar . decFunc
    (10) decFunc -> . func decFunc
    (11) decFunc -> . empty
    (27) func -> . func1 func2
    (112) empty -> .
    (28) func1 -> . func11 func12
    (29) func11 -> . PR_function decideType ID TO_PARABRE

    PR_main         reduce using rule 112 (empty -> .)
    PR_function     shift and go to state 10

    func1                          shift and go to state 9
    func11                         shift and go to state 11
    func                           shift and go to state 12
    decFunc                        shift and go to state 13
    empty                          shift and go to state 14

state 5

    (12) var -> PR_var . tipo ID arrayCreate
    (19) tipo -> . PR_num
    (20) tipo -> . PR_flot
    (21) tipo -> . PR_bool

    PR_num          shift and go to state 15
    PR_flot         shift and go to state 18
    PR_bool         shift and go to state 17

    tipo                           shift and go to state 16

state 6

    (8) decVar -> var . decVar
    (8) decVar -> . var decVar
    (9) decVar -> . empty
    (12) var -> . PR_var tipo ID arrayCreate
    (112) empty -> .

  ! shift/reduce conflict for PR_var resolved as shift
    PR_var          shift and go to state 5
    PR_function     reduce using rule 112 (empty -> .)
    PR_main         reduce using rule 112 (empty -> .)
    TO_UWU          reduce using rule 112 (empty -> .)
    PR_return       reduce using rule 112 (empty -> .)
    PR_draw         reduce using rule 112 (empty -> .)
    PR_circle       reduce using rule 112 (empty -> .)
    PR_square       reduce using rule 112 (empty -> .)
    PR_size         reduce using rule 112 (empty -> .)
    PR_color        reduce using rule 112 (empty -> .)
    ID              reduce using rule 112 (empty -> .)
    PR_kameForw     reduce using rule 112 (empty -> .)
    PR_kameBack     reduce using rule 112 (empty -> .)
    PR_kameRot      reduce using rule 112 (empty -> .)
    PR_loop         reduce using rule 112 (empty -> .)
    PR_if           reduce using rule 112 (empty -> .)

  ! PR_var          [ reduce using rule 112 (empty -> .) ]

    var                            shift and go to state 6
    decVar                         shift and go to state 19
    empty                          shift and go to state 8

state 7

    (1) prog -> PR_program TO_LLAABRE declare . mainBlock TO_LLACIERRA
    (38) mainBlock -> . mainBlock1 bloque TO_LLACIERRA
    (39) mainBlock1 -> . PR_main TO_LLAABRE

    PR_main         shift and go to state 22

    mainBlock1                     shift and go to state 21
    mainBlock                      shift and go to state 20

state 8

    (9) decVar -> empty .

    TO_UWU          reduce using rule 9 (decVar -> empty .)
    PR_return       reduce using rule 9 (decVar -> empty .)
    PR_draw         reduce using rule 9 (decVar -> empty .)
    PR_circle       reduce using rule 9 (decVar -> empty .)
    PR_square       reduce using rule 9 (decVar -> empty .)
    PR_size         reduce using rule 9 (decVar -> empty .)
    PR_color        reduce using rule 9 (decVar -> empty .)
    ID              reduce using rule 9 (decVar -> empty .)
    PR_kameForw     reduce using rule 9 (decVar -> empty .)
    PR_kameBack     reduce using rule 9 (decVar -> empty .)
    PR_kameRot      reduce using rule 9 (decVar -> empty .)
    PR_loop         reduce using rule 9 (decVar -> empty .)
    PR_if           reduce using rule 9 (decVar -> empty .)
    PR_var          reduce using rule 9 (decVar -> empty .)
    PR_function     reduce using rule 9 (decVar -> empty .)
    PR_main         reduce using rule 9 (decVar -> empty .)


state 9

    (27) func -> func1 . func2
    (31) func2 -> . decVar bloque TO_LLACIERRA
    (8) decVar -> . var decVar
    (9) decVar -> . empty
    (12) var -> . PR_var tipo ID arrayCreate
    (112) empty -> .

  ! shift/reduce conflict for PR_var resolved as shift
    PR_var          shift and go to state 5
    TO_UWU          reduce using rule 112 (empty -> .)
    PR_return       reduce using rule 112 (empty -> .)
    PR_draw         reduce using rule 112 (empty -> .)
    PR_circle       reduce using rule 112 (empty -> .)
    PR_square       reduce using rule 112 (empty -> .)
    PR_size         reduce using rule 112 (empty -> .)
    PR_color        reduce using rule 112 (empty -> .)
    ID              reduce using rule 112 (empty -> .)
    PR_kameForw     reduce using rule 112 (empty -> .)
    PR_kameBack     reduce using rule 112 (empty -> .)
    PR_kameRot      reduce using rule 112 (empty -> .)
    PR_loop         reduce using rule 112 (empty -> .)
    PR_if           reduce using rule 112 (empty -> .)

  ! PR_var          [ reduce using rule 112 (empty -> .) ]

    func2                          shift and go to state 23
    decVar                         shift and go to state 24
    var                            shift and go to state 6
    empty                          shift and go to state 8

state 10

    (29) func11 -> PR_function . decideType ID TO_PARABRE
    (32) decideType -> . tipo
    (33) decideType -> . PR_void
    (19) tipo -> . PR_num
    (20) tipo -> . PR_flot
    (21) tipo -> . PR_bool

    PR_void         shift and go to state 25
    PR_num          shift and go to state 15
    PR_flot         shift and go to state 18
    PR_bool         shift and go to state 17

    decideType                     shift and go to state 27
    tipo                           shift and go to state 26

state 11

    (28) func1 -> func11 . func12
    (30) func12 -> . params TO_PARCIERRA TO_LLAABRE
    (34) params -> . tipo ID moreParams
    (35) params -> . empty
    (19) tipo -> . PR_num
    (20) tipo -> . PR_flot
    (21) tipo -> . PR_bool
    (112) empty -> .

    PR_num          shift and go to state 15
    PR_flot         shift and go to state 18
    PR_bool         shift and go to state 17
    TO_PARCIERRA    reduce using rule 112 (empty -> .)

    func12                         shift and go to state 28
    tipo                           shift and go to state 29
    params                         shift and go to state 30
    empty                          shift and go to state 31

state 12

    (10) decFunc -> func . decFunc
    (10) decFunc -> . func decFunc
    (11) decFunc -> . empty
    (27) func -> . func1 func2
    (112) empty -> .
    (28) func1 -> . func11 func12
    (29) func11 -> . PR_function decideType ID TO_PARABRE

    PR_main         reduce using rule 112 (empty -> .)
    PR_function     shift and go to state 10

    func1                          shift and go to state 9
    func11                         shift and go to state 11
    func                           shift and go to state 12
    decFunc                        shift and go to state 32
    empty                          shift and go to state 14

state 13

    (7) declare -> decVar decFunc .

    PR_main         reduce using rule 7 (declare -> decVar decFunc .)


state 14

    (11) decFunc -> empty .

    PR_main         reduce using rule 11 (decFunc -> empty .)


state 15

    (19) tipo -> PR_num .

    ID              reduce using rule 19 (tipo -> PR_num .)


state 16

    (12) var -> PR_var tipo . ID arrayCreate

    ID              shift and go to state 33


state 17

    (21) tipo -> PR_bool .

    ID              reduce using rule 21 (tipo -> PR_bool .)


state 18

    (20) tipo -> PR_flot .

    ID              reduce using rule 20 (tipo -> PR_flot .)


state 19

    (8) decVar -> var decVar .

    TO_UWU          reduce using rule 8 (decVar -> var decVar .)
    PR_return       reduce using rule 8 (decVar -> var decVar .)
    PR_draw         reduce using rule 8 (decVar -> var decVar .)
    PR_circle       reduce using rule 8 (decVar -> var decVar .)
    PR_square       reduce using rule 8 (decVar -> var decVar .)
    PR_size         reduce using rule 8 (decVar -> var decVar .)
    PR_color        reduce using rule 8 (decVar -> var decVar .)
    ID              reduce using rule 8 (decVar -> var decVar .)
    PR_kameForw     reduce using rule 8 (decVar -> var decVar .)
    PR_kameBack     reduce using rule 8 (decVar -> var decVar .)
    PR_kameRot      reduce using rule 8 (decVar -> var decVar .)
    PR_loop         reduce using rule 8 (decVar -> var decVar .)
    PR_if           reduce using rule 8 (decVar -> var decVar .)
    PR_var          reduce using rule 8 (decVar -> var decVar .)
    PR_function     reduce using rule 8 (decVar -> var decVar .)
    PR_main         reduce using rule 8 (decVar -> var decVar .)


state 20

    (1) prog -> PR_program TO_LLAABRE declare mainBlock . TO_LLACIERRA

    TO_LLACIERRA    shift and go to state 34


state 21

    (38) mainBlock -> mainBlock1 . bloque TO_LLACIERRA
    (52) bloque -> . estructura bloque
    (53) bloque -> . TO_UWU
    (54) estructura -> . assign
    (55) estructura -> . loop
    (56) estructura -> . comparacion
    (57) estructura -> . return
    (58) estructura -> . funcCall
    (59) estructura -> . decVar
    (22) assign -> . assignTo OP_IGUAL megaExp
    (42) loop -> . loop1 loop2 loop3
    (84) comparacion -> . compara1 compara2
    (83) return -> . PR_return megaExp
    (60) funcCall -> . funcCall1 funcCall2
    (61) funcCall -> . PR_draw TO_PARABRE megaExp TO_PARCIERRA
    (62) funcCall -> . PR_circle TO_PARABRE exp TO_PARCIERRA
    (63) funcCall -> . PR_square TO_PARABRE exp TO_PARCIERRA
    (64) funcCall -> . PR_size TO_PARABRE exp TO_PARCIERRA
    (65) funcCall -> . PR_color TO_PARABRE colorChoice TO_PARCIERRA
    (8) decVar -> . var decVar
    (9) decVar -> . empty
    (23) assignTo -> . ID arrayIndex
    (24) assignTo -> . PR_kameForw
    (25) assignTo -> . PR_kameBack
    (26) assignTo -> . PR_kameRot
    (43) loop1 -> . PR_loop
    (85) compara1 -> . PR_if TO_PARABRE megaExp TO_PARCIERRA TO_LLAABRE
    (66) funcCall1 -> . ID TO_PARABRE
    (12) var -> . PR_var tipo ID arrayCreate
    (112) empty -> .

  ! shift/reduce conflict for TO_UWU resolved as shift
  ! shift/reduce conflict for PR_return resolved as shift
  ! shift/reduce conflict for PR_draw resolved as shift
  ! shift/reduce conflict for PR_circle resolved as shift
  ! shift/reduce conflict for PR_square resolved as shift
  ! shift/reduce conflict for PR_size resolved as shift
  ! shift/reduce conflict for PR_color resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for PR_kameForw resolved as shift
  ! shift/reduce conflict for PR_kameBack resolved as shift
  ! shift/reduce conflict for PR_kameRot resolved as shift
  ! shift/reduce conflict for PR_loop resolved as shift
  ! shift/reduce conflict for PR_if resolved as shift
  ! shift/reduce conflict for PR_var resolved as shift
    TO_UWU          shift and go to state 36
    PR_return       shift and go to state 45
    PR_draw         shift and go to state 37
    PR_circle       shift and go to state 41
    PR_square       shift and go to state 52
    PR_size         shift and go to state 42
    PR_color        shift and go to state 40
    ID              shift and go to state 51
    PR_kameForw     shift and go to state 47
    PR_kameBack     shift and go to state 48
    PR_kameRot      shift and go to state 43
    PR_loop         shift and go to state 56
    PR_if           shift and go to state 53
    PR_var          shift and go to state 5

  ! TO_UWU          [ reduce using rule 112 (empty -> .) ]
  ! PR_return       [ reduce using rule 112 (empty -> .) ]
  ! PR_draw         [ reduce using rule 112 (empty -> .) ]
  ! PR_circle       [ reduce using rule 112 (empty -> .) ]
  ! PR_square       [ reduce using rule 112 (empty -> .) ]
  ! PR_size         [ reduce using rule 112 (empty -> .) ]
  ! PR_color        [ reduce using rule 112 (empty -> .) ]
  ! ID              [ reduce using rule 112 (empty -> .) ]
  ! PR_kameForw     [ reduce using rule 112 (empty -> .) ]
  ! PR_kameBack     [ reduce using rule 112 (empty -> .) ]
  ! PR_kameRot      [ reduce using rule 112 (empty -> .) ]
  ! PR_loop         [ reduce using rule 112 (empty -> .) ]
  ! PR_if           [ reduce using rule 112 (empty -> .) ]
  ! PR_var          [ reduce using rule 112 (empty -> .) ]

    assignTo                       shift and go to state 35
    bloque                         shift and go to state 38
    decVar                         shift and go to state 39
    estructura                     shift and go to state 44
    var                            shift and go to state 6
    empty                          shift and go to state 8
    return                         shift and go to state 46
    comparacion                    shift and go to state 49
    loop1                          shift and go to state 50
    funcCall                       shift and go to state 54
    funcCall1                      shift and go to state 55
    compara1                       shift and go to state 57
    assign                         shift and go to state 58
    loop                           shift and go to state 59

state 22

    (39) mainBlock1 -> PR_main . TO_LLAABRE

    TO_LLAABRE      shift and go to state 60


state 23

    (27) func -> func1 func2 .

    PR_function     reduce using rule 27 (func -> func1 func2 .)
    PR_main         reduce using rule 27 (func -> func1 func2 .)


state 24

    (31) func2 -> decVar . bloque TO_LLACIERRA
    (52) bloque -> . estructura bloque
    (53) bloque -> . TO_UWU
    (54) estructura -> . assign
    (55) estructura -> . loop
    (56) estructura -> . comparacion
    (57) estructura -> . return
    (58) estructura -> . funcCall
    (59) estructura -> . decVar
    (22) assign -> . assignTo OP_IGUAL megaExp
    (42) loop -> . loop1 loop2 loop3
    (84) comparacion -> . compara1 compara2
    (83) return -> . PR_return megaExp
    (60) funcCall -> . funcCall1 funcCall2
    (61) funcCall -> . PR_draw TO_PARABRE megaExp TO_PARCIERRA
    (62) funcCall -> . PR_circle TO_PARABRE exp TO_PARCIERRA
    (63) funcCall -> . PR_square TO_PARABRE exp TO_PARCIERRA
    (64) funcCall -> . PR_size TO_PARABRE exp TO_PARCIERRA
    (65) funcCall -> . PR_color TO_PARABRE colorChoice TO_PARCIERRA
    (8) decVar -> . var decVar
    (9) decVar -> . empty
    (23) assignTo -> . ID arrayIndex
    (24) assignTo -> . PR_kameForw
    (25) assignTo -> . PR_kameBack
    (26) assignTo -> . PR_kameRot
    (43) loop1 -> . PR_loop
    (85) compara1 -> . PR_if TO_PARABRE megaExp TO_PARCIERRA TO_LLAABRE
    (66) funcCall1 -> . ID TO_PARABRE
    (12) var -> . PR_var tipo ID arrayCreate
    (112) empty -> .

  ! shift/reduce conflict for TO_UWU resolved as shift
  ! shift/reduce conflict for PR_return resolved as shift
  ! shift/reduce conflict for PR_draw resolved as shift
  ! shift/reduce conflict for PR_circle resolved as shift
  ! shift/reduce conflict for PR_square resolved as shift
  ! shift/reduce conflict for PR_size resolved as shift
  ! shift/reduce conflict for PR_color resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for PR_kameForw resolved as shift
  ! shift/reduce conflict for PR_kameBack resolved as shift
  ! shift/reduce conflict for PR_kameRot resolved as shift
  ! shift/reduce conflict for PR_loop resolved as shift
  ! shift/reduce conflict for PR_if resolved as shift
  ! shift/reduce conflict for PR_var resolved as shift
    TO_UWU          shift and go to state 36
    PR_return       shift and go to state 45
    PR_draw         shift and go to state 37
    PR_circle       shift and go to state 41
    PR_square       shift and go to state 52
    PR_size         shift and go to state 42
    PR_color        shift and go to state 40
    ID              shift and go to state 51
    PR_kameForw     shift and go to state 47
    PR_kameBack     shift and go to state 48
    PR_kameRot      shift and go to state 43
    PR_loop         shift and go to state 56
    PR_if           shift and go to state 53
    PR_var          shift and go to state 5

  ! TO_UWU          [ reduce using rule 112 (empty -> .) ]
  ! PR_return       [ reduce using rule 112 (empty -> .) ]
  ! PR_draw         [ reduce using rule 112 (empty -> .) ]
  ! PR_circle       [ reduce using rule 112 (empty -> .) ]
  ! PR_square       [ reduce using rule 112 (empty -> .) ]
  ! PR_size         [ reduce using rule 112 (empty -> .) ]
  ! PR_color        [ reduce using rule 112 (empty -> .) ]
  ! ID              [ reduce using rule 112 (empty -> .) ]
  ! PR_kameForw     [ reduce using rule 112 (empty -> .) ]
  ! PR_kameBack     [ reduce using rule 112 (empty -> .) ]
  ! PR_kameRot      [ reduce using rule 112 (empty -> .) ]
  ! PR_loop         [ reduce using rule 112 (empty -> .) ]
  ! PR_if           [ reduce using rule 112 (empty -> .) ]
  ! PR_var          [ reduce using rule 112 (empty -> .) ]

    assignTo                       shift and go to state 35
    bloque                         shift and go to state 61
    decVar                         shift and go to state 39
    estructura                     shift and go to state 44
    var                            shift and go to state 6
    empty                          shift and go to state 8
    return                         shift and go to state 46
    comparacion                    shift and go to state 49
    loop1                          shift and go to state 50
    funcCall                       shift and go to state 54
    funcCall1                      shift and go to state 55
    compara1                       shift and go to state 57
    assign                         shift and go to state 58
    loop                           shift and go to state 59

state 25

    (33) decideType -> PR_void .

    ID              reduce using rule 33 (decideType -> PR_void .)


state 26

    (32) decideType -> tipo .

    ID              reduce using rule 32 (decideType -> tipo .)


state 27

    (29) func11 -> PR_function decideType . ID TO_PARABRE

    ID              shift and go to state 62


state 28

    (28) func1 -> func11 func12 .

    PR_var          reduce using rule 28 (func1 -> func11 func12 .)
    TO_UWU          reduce using rule 28 (func1 -> func11 func12 .)
    PR_return       reduce using rule 28 (func1 -> func11 func12 .)
    PR_draw         reduce using rule 28 (func1 -> func11 func12 .)
    PR_circle       reduce using rule 28 (func1 -> func11 func12 .)
    PR_square       reduce using rule 28 (func1 -> func11 func12 .)
    PR_size         reduce using rule 28 (func1 -> func11 func12 .)
    PR_color        reduce using rule 28 (func1 -> func11 func12 .)
    ID              reduce using rule 28 (func1 -> func11 func12 .)
    PR_kameForw     reduce using rule 28 (func1 -> func11 func12 .)
    PR_kameBack     reduce using rule 28 (func1 -> func11 func12 .)
    PR_kameRot      reduce using rule 28 (func1 -> func11 func12 .)
    PR_loop         reduce using rule 28 (func1 -> func11 func12 .)
    PR_if           reduce using rule 28 (func1 -> func11 func12 .)


state 29

    (34) params -> tipo . ID moreParams

    ID              shift and go to state 63


state 30

    (30) func12 -> params . TO_PARCIERRA TO_LLAABRE

    TO_PARCIERRA    shift and go to state 64


state 31

    (35) params -> empty .

    TO_PARCIERRA    reduce using rule 35 (params -> empty .)


state 32

    (10) decFunc -> func decFunc .

    PR_main         reduce using rule 10 (decFunc -> func decFunc .)


state 33

    (12) var -> PR_var tipo ID . arrayCreate
    (13) arrayCreate -> . TO_CORABRE TO_NUM TO_CORCIERRA
    (14) arrayCreate -> . TO_CORABRE TO_NUM TO_CORCIERRA TO_CORABRE TO_NUM TO_CORCIERRA
    (15) arrayCreate -> . empty
    (112) empty -> .

    TO_CORABRE      shift and go to state 65
    PR_var          reduce using rule 112 (empty -> .)
    PR_function     reduce using rule 112 (empty -> .)
    PR_main         reduce using rule 112 (empty -> .)
    TO_UWU          reduce using rule 112 (empty -> .)
    PR_return       reduce using rule 112 (empty -> .)
    PR_draw         reduce using rule 112 (empty -> .)
    PR_circle       reduce using rule 112 (empty -> .)
    PR_square       reduce using rule 112 (empty -> .)
    PR_size         reduce using rule 112 (empty -> .)
    PR_color        reduce using rule 112 (empty -> .)
    ID              reduce using rule 112 (empty -> .)
    PR_kameForw     reduce using rule 112 (empty -> .)
    PR_kameBack     reduce using rule 112 (empty -> .)
    PR_kameRot      reduce using rule 112 (empty -> .)
    PR_loop         reduce using rule 112 (empty -> .)
    PR_if           reduce using rule 112 (empty -> .)

    arrayCreate                    shift and go to state 66
    empty                          shift and go to state 67

state 34

    (1) prog -> PR_program TO_LLAABRE declare mainBlock TO_LLACIERRA .

    $end            reduce using rule 1 (prog -> PR_program TO_LLAABRE declare mainBlock TO_LLACIERRA .)


state 35

    (22) assign -> assignTo . OP_IGUAL megaExp

    OP_IGUAL        shift and go to state 68


state 36

    (53) bloque -> TO_UWU .

    TO_LLACIERRA    reduce using rule 53 (bloque -> TO_UWU .)


state 37

    (61) funcCall -> PR_draw . TO_PARABRE megaExp TO_PARCIERRA

    TO_PARABRE      shift and go to state 69


state 38

    (38) mainBlock -> mainBlock1 bloque . TO_LLACIERRA

    TO_LLACIERRA    shift and go to state 70


state 39

    (59) estructura -> decVar .

    TO_UWU          reduce using rule 59 (estructura -> decVar .)
    PR_return       reduce using rule 59 (estructura -> decVar .)
    PR_draw         reduce using rule 59 (estructura -> decVar .)
    PR_circle       reduce using rule 59 (estructura -> decVar .)
    PR_square       reduce using rule 59 (estructura -> decVar .)
    PR_size         reduce using rule 59 (estructura -> decVar .)
    PR_color        reduce using rule 59 (estructura -> decVar .)
    ID              reduce using rule 59 (estructura -> decVar .)
    PR_kameForw     reduce using rule 59 (estructura -> decVar .)
    PR_kameBack     reduce using rule 59 (estructura -> decVar .)
    PR_kameRot      reduce using rule 59 (estructura -> decVar .)
    PR_loop         reduce using rule 59 (estructura -> decVar .)
    PR_if           reduce using rule 59 (estructura -> decVar .)
    PR_var          reduce using rule 59 (estructura -> decVar .)


state 40

    (65) funcCall -> PR_color . TO_PARABRE colorChoice TO_PARCIERRA

    TO_PARABRE      shift and go to state 71


state 41

    (62) funcCall -> PR_circle . TO_PARABRE exp TO_PARCIERRA

    TO_PARABRE      shift and go to state 72


state 42

    (64) funcCall -> PR_size . TO_PARABRE exp TO_PARCIERRA

    TO_PARABRE      shift and go to state 73


state 43

    (26) assignTo -> PR_kameRot .

    OP_IGUAL        reduce using rule 26 (assignTo -> PR_kameRot .)


state 44

    (52) bloque -> estructura . bloque
    (52) bloque -> . estructura bloque
    (53) bloque -> . TO_UWU
    (54) estructura -> . assign
    (55) estructura -> . loop
    (56) estructura -> . comparacion
    (57) estructura -> . return
    (58) estructura -> . funcCall
    (59) estructura -> . decVar
    (22) assign -> . assignTo OP_IGUAL megaExp
    (42) loop -> . loop1 loop2 loop3
    (84) comparacion -> . compara1 compara2
    (83) return -> . PR_return megaExp
    (60) funcCall -> . funcCall1 funcCall2
    (61) funcCall -> . PR_draw TO_PARABRE megaExp TO_PARCIERRA
    (62) funcCall -> . PR_circle TO_PARABRE exp TO_PARCIERRA
    (63) funcCall -> . PR_square TO_PARABRE exp TO_PARCIERRA
    (64) funcCall -> . PR_size TO_PARABRE exp TO_PARCIERRA
    (65) funcCall -> . PR_color TO_PARABRE colorChoice TO_PARCIERRA
    (8) decVar -> . var decVar
    (9) decVar -> . empty
    (23) assignTo -> . ID arrayIndex
    (24) assignTo -> . PR_kameForw
    (25) assignTo -> . PR_kameBack
    (26) assignTo -> . PR_kameRot
    (43) loop1 -> . PR_loop
    (85) compara1 -> . PR_if TO_PARABRE megaExp TO_PARCIERRA TO_LLAABRE
    (66) funcCall1 -> . ID TO_PARABRE
    (12) var -> . PR_var tipo ID arrayCreate
    (112) empty -> .
